libs/@local/hashql/ast/tests/ui/lower/expander/labeled-argument-fn.jsonc
//@ run: fail
//@ description: labeled arguments are not allowed in `fn`
[
  "::kernel::special_form::fn",
  { "#tuple": ["T"] },
  { "#struct": { "x": "Integer" } },
  "Integer",
  { "#literal": 0 },
  {
    ":extra": { "#literal": 0 }
    //~^ ERROR labeled arguments are not allowed in `fn`
  }
]
